--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ async function loadCSVData(blockType) {
 
 
 function showIntroScreen() {
-  updateScreen(
+  updateScreen(`
     <div style="display:flex;align-items:center;justify-content:center;height:100%;padding:40px;box-sizing:border-box;">
       <div style="flex:1;display:flex;justify-content:center;">
         <img src="Melody.png" alt="Melody character" style="max-height:80vh;max-width:90%;border-radius:20px;" />
@@ -151,7 +151,7 @@ function showIntroScreen() {
         <audio id="introAudio" src="intro_narration.mp3"></audio>
       </div>
     </div>
-  );
+ `);
 
   const introAudio = document.getElementById("introAudio");
   const continueBtn = document.getElementById("continueIntro");
@@ -168,14 +168,14 @@ function showIntroScreen() {
 }
 
 function showIntroVideo() {
-  updateScreen(
+  updateScreen(`
     <div style="display:flex;justify-content:center;align-items:center;height:100%;background:black;">
       <video id="introVideo" width="100%" height="100%" playsinline muted style="max-width:100%;max-height:100%;">
         <source src="intro_video.mp4" type="video/mp4" />
       </video>
       <audio id="introNarration2" src="intro_narration2.mp3"></audio>
     </div>
-  );
+  `);
 
   const video = document.getElementById("introVideo");
   const narration = document.getElementById("introNarration2");
@@ -193,7 +193,7 @@ function showIntroVideo() {
 }
 
 function showNarrationScreen() {
-  updateScreen(
+  updateScreen(`
     <div style="display:flex;justify-content:center;align-items:center;height:100%;background:white;padding:40px;box-sizing:border-box;">
       <div style="flex:1;display:flex;justify-content:center;">
         <img src="Melody.png" alt="Melody character" style="max-height:80vh;max-width:90%;border-radius:20px;" />
@@ -209,7 +209,7 @@ function showNarrationScreen() {
         <audio id="introNarration3" src="intro_narration3.mp3"></audio>
       </div>
     </div>
-  );
+  `);
 
   const button = document.getElementById("playNarration");
   const audio = document.getElementById("introNarration3");
@@ -228,7 +228,7 @@ function showNarrationScreen() {
 /* --------------------- TEMPO PRACTICE FLOW ------------------------ */
 
 function showFastIntro() {
-  updateScreen(
+  updateScreen(`
     <div style="display:flex;justify-content:center;align-items:center;height:100%;background:white;padding:40px;box-sizing:border-box;">
       <p style="font-size:1.5em;line-height:1.8;max-width:800px;text-align:center;">
         First, we’re going to learn about tempo.<br>
@@ -238,7 +238,7 @@ function showFastIntro() {
       </p>
       <audio id="fastNarration" src="PT_FAST1_NARRATION.mp3"></audio>
     </div>
-  );
+  `);
 
   const narration = document.getElementById("fastNarration");
   narration.play().then(() => {
@@ -250,11 +250,11 @@ function showFastIntro() {
 }
 
 function playFastVideo() {
-  updateScreen(
+  updateScreen(`
     <video id="fastVideo" width="100%" height="100%" playsinline style="background:black;">
       <source src="PT_FAST1.mp4" type="video/mp4" />
     </video>
-  );
+  `);
 
   const video = document.getElementById("fastVideo");
   video.play().catch(e => console.warn("Video play failed:", e));
@@ -262,7 +262,7 @@ function playFastVideo() {
 }
 
 function showSlowIntro() {
-  updateScreen(
+  updateScreen(`
     <div style="display:flex;justify-content:center;align-items:center;height:100%;background:white;padding:40px;box-sizing:border-box;">
       <p style="font-size:1.5em;line-height:1.8;max-width:800px;text-align:center;">
         Whoa! That was a fast ride!<br><br>
@@ -271,7 +271,7 @@ function showSlowIntro() {
       </p>
       <audio id="slowNarration" src="PT_SLOW1_NARRATION.mp3"></audio>
     </div>
-  );
+  `);
 
   const narration = document.getElementById("slowNarration");
   narration.play().then(() => {
@@ -283,11 +283,11 @@ function showSlowIntro() {
 }
 
 function playSlowVideo() {
-  updateScreen(
+  updateScreen(`
     <video id="slowVideo" width="100%" height="100%" playsinline style="background:black;">
       <source src="PT_SLOW1.mp4" type="video/mp4" />
     </video>
-  );
+  `);
 
   const video = document.getElementById("slowVideo");
   video.play().catch(e => console.warn("Video play failed:", e));
@@ -296,7 +296,7 @@ function playSlowVideo() {
 
 function showTempoInstructions() {
   setTimeout(() => {
-    updateScreen(
+    updateScreen(`
       <div style="display:flex;justify-content:center;align-items:center;height:100%;background:white;padding:40px;box-sizing:border-box;">
         <p style="font-size:1.5em;line-height:1.8;max-width:800px;text-align:center;">
           Great! Now let's practice even more.<br><br>
@@ -304,7 +304,7 @@ function showTempoInstructions() {
         </p>
         <audio id="tempoInstructions" src="PT_TEMPO_INSTRUCTIONS.mp3"></audio>
       </div>
-    );
+    `);
 
     const audio = document.getElementById("tempoInstructions");
     audio.play().then(() => {
@@ -336,13 +336,13 @@ function runTempoPractice() {
 }
 
 function playTempoPracticeVideo(videoFile, correctAnswer, callback) {
-  updateScreen(
+  updateScreen(`
     <div style="width:100%; height:100%; display:flex; align-items:center; justify-content:center; background:#cce0dd;">
       <video id="practiceVideo" playsinline autoplay style="width:100%; height:100%; object-fit:contain; background:#cce0dd;">
         <source src="${videoFile}" type="video/mp4">
       </video>
     </div>
-  );
+  `);
 
   const video = document.getElementById("practiceVideo");
 
@@ -357,7 +357,7 @@ function playTempoPracticeVideo(videoFile, correctAnswer, callback) {
 }
 
 function showTempoResponseScreen(correctAnswer, callback) {
-  updateScreen(
+  updateScreen(`
 <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%;
     background: url('/mnt/data/0372e1b1-84c0-4ecf-9841-fbaf1a4be76c.png') center/cover no-repeat;
     padding: 20px;">
@@ -371,7 +371,7 @@ function showTempoResponseScreen(correctAnswer, callback) {
       <audio id="wrongSound" src="wrong_feedback.mp3"></audio>
       <div id="feedback" style="margin-top: 20px; font-size: 1.2em; color: red;"></div>
     </div>
-  );
+  `);
 
   const buttons = document.querySelectorAll('.tempo-btn');
   let answered = false;
@@ -404,7 +404,7 @@ function showTempoResponseScreen(correctAnswer, callback) {
 /* REAL TRIALS */
 
 function showRealTrialsIntro() {
-  updateScreen(
+  updateScreen(`
     <div style="display:flex;flex-direction:column;align-items:center;justify-content:center;height:100%;
       background: url('/mnt/data/0372e1b1-84c0-4ecf-9841-fbaf1a4be76c.png') center/cover no-repeat;
       padding:40px;box-sizing:border-box;">
@@ -418,7 +418,7 @@ function showRealTrialsIntro() {
       <button id="playRealInstructions" class="btn-primary" style="margin-top:20px;">Click to Play Instructions</button>
       <button id="startRealTrials" class="btn-primary" style="display:none; margin-top:20px;">Start Real Trials</button>
     </div>
-  );
+  `);
 
   const playBtn = document.getElementById("playRealInstructions");
   const startBtn = document.getElementById("startRealTrials");
@@ -553,7 +553,7 @@ function hideAll() {
 
   
 function showResponseOptions() {
-  updateScreen(
+  updateScreen(`
     <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%; padding: 20px;">
       <h1 style="color: #4b2e83;">Which elevator did Melody ride?</h1>
       <p style="max-width:600px;font-size:1.1em;margin-bottom:30px;">
@@ -571,7 +571,7 @@ function showResponseOptions() {
           <div style="margin-top:12px;font-weight:bold;">Wonky Elevator</div>
         </div>
       </div>
-    </div>);
+    </div> `);
   document.getElementById("normalElevator").addEventListener("click", () => handleResponse("normal"), { once: true });
   document.getElementById("wonkyElevator").addEventListener("click", () => handleResponse("wonky"), { once: true });
 }
@@ -602,7 +602,7 @@ function handleResponse(choice) {
       trialCounter=1; currentBlockIndex++;
     }
     if(currentBlockIndex>=BLOCK_ORDER.length){
-      updateScreen(<h1>Thank you for participating! All trials complete.</h1>);
+updateScreen(`<h1>Thank you for participating! All trials complete.</h1>`);
     }else{
       rebuildBaseHTML();
       runPracticeTrials(BLOCK_ORDER[currentBlockIndex]);
